--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@lamplightdev/wafer",
-  "version": "0.0.38",
+  "version": "0.0.39",
   "description": "Web Component Base Class",
   "main": "lib/wafer.js",
   "type": "module",
+  "files": [
+    "dist/**",
+    "lib/**"
+  ],
   "scripts": {
     "test": "wtr test/client --recursive --node-resolve",
     "test:watch": "wtr test/client --recursive --node-resolve --watch",
