--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 14
       - run: npm ci
-      - run: npm test
+      - run: npm build
 
   publish-npm:
     needs: build
@@ -45,6 +45,6 @@ jobs:
           node-version: 14
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: npm publish
+      - run: npm build
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
