--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@lamplightdev/wafer",
-  "version": "0.0.44",
+  "version": "0.0.45",
   "description": "Web Component Base Class",
   "main": "lib/wafer.js",
   "exports": "./lib/wafer.js",
   "type": "module",
+  "sideEffects": false,
   "files": [
     "dist/**",
     "lib/**"
