--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,17 +15,7 @@
   "include": ["src/**/*.js"],
   "exclude": ["node_modules"],
   "typedocOptions": {
-    "entryPoints": [
-      "src/types.js",
-      "src/wafer.js",
-      "src/wafer-mixin.js",
-      "src/dom.js",
-      "src/knobs.js",
-      "src/common.js",
-      "src/server/wafer.js",
-      "src/server/element.js",
-      "src/server/dom.js"
-    ],
+    "entryPoints": ["src/"],
     "excludeExternals": true,
     "out": "../wafer-docs/api"
   }
