--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "typescript": "^4.3.x"
   },
   "dependencies": {
-    "node-html-parser": "^4.1.0"
+    "node-html-parser": "^4.1.0",
+    "rollup-plugin-filesize": "^9.1.1"
   }
 }
